--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-    .container .text{background-color: yellow; color: red; text-align: center;}
+    .container .text{background-color: yellow; color: red; text-align: center; font-size: 20px;}
